B-F Backup Sandbox 30.4.12/src/objects/Vendor__c.object
<CustomObject>
    <fields>
        <fullName>NON_US_Payment_Region_Picklist__c</fullName>
        <label>NON-US Payment Region</label>
        <picklist>
            <picklistValues>
                <fullName>AU - ACT - Aust Capital Terr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AU - NSW - New South Wales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AU - NT - Northern Territory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AU - QLD - Queensland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AU - SA - South Autralia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AU - TAS - Tasmania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AU - VIC - Victoria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AU - WA - Western Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BR - AC - Acre</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BR - AL - Alagoas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BR - AM - Amazonas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BR - AP - Amapá</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BR - BA - Bahia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BR - CE - Ceará</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BR - DF - Distrito Federal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BR - ES - Espírito Santo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BR - GO - Goiás</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BR - MA - Maranhão</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BR - MG - Minas Gerais</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BR - MS - Mato Grosso do Sul</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BR - MT - Mato Grosso</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BR - PA - Pará</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BR - PB - Paraíba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BR - PE - Pernambuco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BR - PI - Piauí</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BR - PR - Paraná</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BR - RJ - Rio de Janeiro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BR - RN - Rio Grande do Norte</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BR - RO - Rondônia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BR - RR - Roraima</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NON_US_Payment_Region__c</fullName>
        <inlineHelpText>If Other enter NON-US Payment Region value</inlineHelpText>
        <label>Other Payment Region</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_on_Bank_Account__c</fullName>
        <label>Payee</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payee_Email_1__c</fullName>
        <inlineHelpText>Email to which payment notification is sent</inlineHelpText>
        <label>Payee Email 1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Payee_Email_2__c</fullName>
        <inlineHelpText>Email to which payment notification is sent</inlineHelpText>
        <label>Payee Email 2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Payee_Email_3__c</fullName>
        <inlineHelpText>Email to which payment notification is sent</inlineHelpText>
        <label>Payee Email 3</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Payment_Address_STRAS__c</fullName>
        <description>Mailing address of vendor</description>
        <inlineHelpText>Payment address</inlineHelpText>
        <label>Payment Address</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_City_ORT01__c</fullName>
        <description>Payment Data - Mailing city</description>
        <label>Payment City</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Postal_Code_PSTLZ__c</fullName>
        <description>Payment Data - Mailing postal code</description>
        <label>Payment Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Region__c</fullName>
        <description>Payment Data - Mailing region</description>
        <label>Payment Region</label>
        <picklist>
            <picklistValues>
                <fullName>AK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Payment_Terms__c</fullName>
        <label>Payment Terms</label>
        <picklist>
            <picklistValues>
                <fullName>.5 .5% 10 days Net 30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.5 1.5% 10 days Net 30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10NM Before 10 of the next month 0.5 % cash discount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10P 10 days Net - Thursday Pay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10TH 1-6th pay 10th of month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7-31 10th next month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>110 1% 10 days Net 30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>112 1% 10 days Net 20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>115 1% 15 days Net 30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>130 1% 30 days Net 31</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15P 12 days net - Thursday Pay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15TH 1-13 pay the 15th of the month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14-31 pay 15th of the next month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.5 2.5% 10 days Net 30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>210 2% 10 days Net 30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>215 2% 15 days Net 30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>220 2% 20 days Net 30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25NM Before 25 of the next month 1 % cash discount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>260 2% 30 days Net 60</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30P Net 27 - Thursday Pay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>310 3% 10 days 30 Net</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>430 4% 30 days 2% 60 days net 90</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>510 5% 10 days Net 30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7OM1 1% Paid 7th of Next Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7OM2 Before 15th of the month 2% paid 22nd</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>After 15th 2 % Pd 7th Next Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7OM3 Before 15th of the month 1% paid on 22nd</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>After 15 of the month 1 % Pd 7th Next Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EOFM End of Following Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FOM FOM (1st-20th) 1st of next month</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Purchase_or_Service__c</fullName>
        <description>Describe exactly what is being purchased or what service is being provided</description>
        <inlineHelpText>Describe exactly what is being purchased or what service is being provided. 
Must be less than or equal to 100 characters.</inlineHelpText>
        <label>Purchase or Service</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Purchasing_Org__c</fullName>
        <label>Purchasing Organizations</label>
        <picklist>
            <picklistValues>
                <fullName>No PO Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BRA - Purch. Org. Brasil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHNA - China Finished Goods</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EUR - EuropeanDistribution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GBP - UK Finished Goods</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OTHR - Other inc. Corporate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>POL - BF Polska</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PROD - Production Units</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>THC1 - BF TEQUILA MEXICO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>THC2 - BFTM COMERCIAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>THC3 - BFTM CAMPO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>THC5 - BFTM FINANZAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VAC1 - BFTM VALLE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WINE - Wine</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Reconciliation_Account__c</fullName>
        <description>Reconciliation Account</description>
        <label>Reconciliation Account</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSN_Encrypted__c</fullName>
        <description>SSN (Encrypted)</description>
        <inlineHelpText>The format should include hyphens: 123-45-6789</inlineHelpText>
        <label>SSN</label>
        <length>16</length>
        <maskChar>asterisk</maskChar>
        <maskType>ssn</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>SSN__c</fullName>
        <inlineHelpText>XXX-XX-XXXX</inlineHelpText>
        <label>SSN</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Search_Term__c</fullName>
        <label>Search Term</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Address_STRAS__c</fullName>
        <description>Tax address for US</description>
        <inlineHelpText>Tax address</inlineHelpText>
        <label>Tax Address</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_City_ORT01__c</fullName>
        <label>Tax City</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Jurisdiction_Code__c</fullName>
        <description>If country equals Brazil this field is needed</description>
        <inlineHelpText>Only applicable if country is Brazil</inlineHelpText>
        <label>Tax Jurisdiction Code</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Jurisdiction__c</fullName>
        <label>Tax Jurisdiction</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Number_1__c</fullName>
        <description>Brazil Only</description>
        <inlineHelpText>Brazil Only</inlineHelpText>
        <label>Tax Number 1</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Number_2__c</fullName>
        <inlineHelpText>Country	      Tax Number
Argentina     NIP number or CM number
Belgium	      VAT number
Brazil	      CPF number
Bulgaria      Legal persons: tax number
Croatia	      OIB number
Czech 	      ICO number
France	      SIREN number</inlineHelpText>
        <label>Tax Number 2</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Number_3__c</fullName>
        <label>Tax Number 3</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Number__c</fullName>
        <label>Tax Number</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Office__c</fullName>
        <label>Tax Office</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Postal_Code_PSTLZ__c</fullName>
        <label>Tax Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Region__c</fullName>
        <label>Tax Region</label>
        <picklist>
            <picklistValues>
                <fullName>AK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tax_Withholding_Code__c</fullName>
        <label>Tax Withholding Code</label>
        <picklist>
            <picklistValues>
                <fullName>US - 1 - Rents</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US - 2 - Royalties</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US - 3 - Prizes, awards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US - 4 - Federal income tax withheld</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US - 5 - Fishing boat proceeds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US - 6 - Medical and health care payments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US - 7 - Nonemployee compensation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US - 8 - Substitute payments (dividends/interest)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US - 9 - Payer made direct sales of $5000 or more</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US - 10 - Crop insurance proceeds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US - 11 - State income tax withheld</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US - 14 - Attorneys</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Taxpayer_Identification_Number_Encrypted__c</fullName>
        <inlineHelpText>Please use the correct format: 12-3456789</inlineHelpText>
        <label>Taxpayer Identification Number</label>
        <length>16</length>
        <maskChar>asterisk</maskChar>
        <maskType>lastFour</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Taxpayer_Identification_Number__c</fullName>
        <inlineHelpText>XX-XXXXXXX</inlineHelpText>
        <label>Taxpayer Identification Number</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Zone__c</fullName>
        <label>Time Zone</label>
        <picklist>
            <controllingField>Country_LAND1__c</controllingField>
            <picklistValues>
                <fullName>Eastern Time Zone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central Time Zone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mountain Time Zone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pacific Time Zone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AFGHAN Afghanistan + 4 1/2 hours NO daylight savings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALA Alaska (Anchorage) - 9 hours USA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALAW Alaska (Aleutian) - 10 hours USA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AST Atlantic Time (Halifax) - 4 hours USA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUSACT Australia Capital Territories + 10 hours Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUSLHI Australia Lord Howe Island + 10 1/2 hours Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUSNSW Australia New South Wales + 10 hours Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUSNT Australia Northern Territories+ 9 1/2 hours NO daylight savings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUSQLD Australia Queensland + 10 hours NO daylight savings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUSSA Australia South Australia + 9 1/2 hours Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUSTAS Australia Tasmania + 10 hours Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUSVIC Australia Victoria + 10 hours Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUSWA Australia Western Australia + 8 hours NO daylight savings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZOREN Europe Azores - 1 hour Europe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BRAZIL Brazil - 3 hours Brazil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BRZLAN Brazil Andes - 5 hours Brazil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BRZLEA Brazil East - 3 hours Brazil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BRZLWE Brasil West - 4 hours Brazil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAT Central Africa + 2 hours NO daylight savings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CET Central Europe + 1 hour Europe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHILE Chile - 4 hours Chile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHILEE Chile Easter Island - 6 hours Chile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CST Central Time (Dallas) - 6 hours USA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CSTNO Central Time (No DST) - 6 hours NO daylight savings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CYPRUS Cyprus + 2 hours Cyprus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EET Eastern Europe + 2 hours Europe</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tolerance_Group__c</fullName>
        <label>Tolerance Group</label>
        <picklist>
            <controllingField>Approval_Status__c</controllingField>
            <picklistValues>
                <fullName>1000 - 1000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2000 - 1000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2100 - 1000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2200 - 1000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2210 - 1000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2211 - 1000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2220 - 1000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2250 - 1000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2300 - 1000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3000 - 1000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3100 - 1000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3105 - 1000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3110 - 1000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3200 - 1000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3300 - 1000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3301 - 1000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3400 - 1000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3500 - 1000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3510 - 1000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3520 - 1000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3530 - 1000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3540 - 1000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4000 - 1000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4001 - 1000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4002 - 1000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4003 - 1000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4004 - 1000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4005 - 1000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4008 - 1000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4012 - 1000</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Vat_Registration_Number__c</fullName>
        <label>Vat Registration Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Number_LIFNR__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>R/3 Vendor Number</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>X1099_Business_Legal_Name__c</fullName>
        <description>Company&apos;s name should be as it appears on the W-9 tax form</description>
        <inlineHelpText>Company&apos;s name should be as it appears on the W-9 tax form</inlineHelpText>
        <label>1099 Business/Legal Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Your_Manager_s_Name__c</fullName>
        <label>Your Manager&apos;s Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Your_Name__c</fullName>
        <defaultValue>$User.FirstName  &amp;  &quot; &quot; &amp; $User.LastName</defaultValue>
        <description>Name of person filling out the B-F Vendor Request Form</description>
        <inlineHelpText>Name of person filling out the B-F Vendor Request Form</inlineHelpText>
        <label>Your Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Vendor Request</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Business_Name_NAME1__c</columns>
        <columns>Vendor_Number_LIFNR__c</columns>
        <columns>Business_City_ORT01__c</columns>
        <columns>Country_LAND1__c</columns>
        <columns>Business_Region__c</columns>
        <columns>NON_US_Business_Region_Picklist__c</columns>
        <columns>Business_Postal_Code_PSTLZ__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_Vendors</fullName>
        <columns>Business_Name_NAME1__c</columns>
        <columns>Business_Address_STRAS__c</columns>
        <columns>Business_City_ORT01__c</columns>
        <columns>Business_Region__c</columns>
        <columns>Country_LAND1__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Vendors</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Vendor_Approval</fullName>
        <columns>Business_Name_NAME1__c</columns>
        <columns>NAME</columns>
        <columns>Approval_Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Approval_Status__c</field>
            <operation>equals</operation>
            <value>Submitted</value>
        </filters>
        <label>Vendor Approval</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Vendor_Last_Changed_By</fullName>
        <columns>NAME</columns>
        <columns>Business_Name_NAME1__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>My_Manager__c</columns>
        <columns>My_Manager_Email__c</columns>
        <columns>Method_of_Payment__c</columns>
        <filterScope>Everything</filterScope>
        <label>Vendor Last Changed By</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>VENDOR-{0000}</displayFormat>
        <label>Vendor Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vendor Request</pluralLabel>
    <recordTypes>
        <fullName>Vendor_NON_US</fullName>
        <active>true</active>
        <description>Vendor is not located in the US</description>
        <label>Vendor NON-US</label>
    </recordTypes>
</CustomObject>